--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,9 @@ x64/
 build/
 [Bb]in/
 [Oo]bj/
-
+**/bin/Debug/
+**/bin/Release/
+**/obj/
 # NuGet Packages
 *.nupkg
 # The packages folder can be ignored because of Package Restore
